[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/TransmissionHUD.gd" type="Script" id=1]
[ext_resource path="res://HUD/panel_left.png" type="Texture" id=2]
[ext_resource path="res://Fonts/SF_Archery_Black_SC_Oblique.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/GlitchShader.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 3 )

[node name="TransmissionHUD" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
transmissions_file_path = "res://HUD/transimissions.json"

[node name="Background" type="TextureRect" parent="."]
margin_top = 2.43396
margin_right = 517.0
margin_bottom = 383.434
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterNameLabel" type="Label" parent="Background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -494.0
margin_top = -126.0
margin_right = -178.0
margin_bottom = -77.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.807843, 0.423529 )
text = "Capt'n Multiball"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransmissionLabel" type="Label" parent="Background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -442.0
margin_top = -98.0
margin_right = -152.0
margin_bottom = -15.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "lolololololol"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GlitchShader" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -14.9641
margin_top = 5.15472
margin_right = 1070.04
margin_bottom = 1918.15
